--- a/tw/src/tw/config.json
+++ b/tw/src/tw/config.json
@@ -1,6 +1,6 @@
 ﻿{
     "Data": {
-        "DefaultConnection": { 
+        "DefaultConnection": {
             "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=aspnet5-tw-fb927961-79f2-44bb-8539-504d7237ca69;Trusted_Connection=True;MultipleActiveResultSets=true"
         }
     },
@@ -8,5 +8,11 @@
         "ApplicationDbContext": {
             "ConnectionStringKey": "Data:DefaultConnection:ConnectionString"
         }
+    },
+    "stopwatch": {
+        "ErrorTime": "3",
+        "WarningTime": "1.5",
+        "InformationTime": ".75",
+        "ShowTimeInViews": true
     }
 }
